# lock-controller

./: .gitignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  common.c  common.h  communication.c  communication.h  controller.c  controller.h  main.c  main.h  peripheral.c  peripheral.h  state_machine.c  state_machine.h
